发送个人消息

--- a/Lghui.SmartQQ/Lghui.SmartQQ.csproj
+++ b/Lghui.SmartQQ/Lghui.SmartQQ.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enum\Poll2\PollType.cs" />
+    <Compile Include="Enum\SendBuddyMsg2\FontSizeEnum.cs" />
     <Compile Include="Enum\SendBuddyMsg2\PollEnum.cs" />
     <Compile Include="Model\DiscuInfo\Info.cs" />
     <Compile Include="Model\DiscuInfo\Mem.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="Model\RecentList2\Result.cs" />
     <Compile Include="Model\SelfInfo2\Birthday.cs" />
     <Compile Include="Model\SelfInfo2\Result.cs" />
+    <Compile Include="Model\SendBuddyMsg2\FontModel.cs" />
     <Compile Include="Model\SendBuddyMsg2\MsgModel.cs" />
     <Compile Include="Model\SendBuddyMsg2\SendModel.cs" />
     <Compile Include="Model\SmartQQModel.cs" />
